--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testImplementation 'org.assertj:assertj-core:3.10.0'
+    testImplementation 'org.skyscreamer:jsonassert:1.5.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
     testAnnotationProcessor('org.projectlombok:lombok:1.18.4')
     testCompile('org.projectlombok:lombok:1.18.4')
