--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ task sourcesJar(type: Jar) {
 }
 
 group = 'com.github.leeonky'
-version = '0.0.5' + System.env.VERSION_SCOPE
+version = '0.0.6' + System.env.VERSION_SCOPE
 sourceCompatibility = 1.8
 
 jacocoTestReport {
@@ -45,6 +45,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.github.leeonky:bean-util:0.0.7'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testImplementation 'org.assertj:assertj-core:3.10.0'
     testImplementation 'org.skyscreamer:jsonassert:1.5.0'
