--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,7 @@ repositories {
 dependencies {
     implementation 'com.github.leeonky:bean-util:0.2.3'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
+    testImplementation("org.junit.jupiter:junit-jupiter-params:5.3.1")
     testImplementation 'org.assertj:assertj-core:3.10.0'
     testImplementation 'org.skyscreamer:jsonassert:1.5.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
