--- a/build.gradle
+++ b/build.gradle
@@ -48,10 +48,11 @@ repositories {
 
 dependencies {
     implementation 'com.github.leeonky:bean-util:0.2.4'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
-    testImplementation("org.junit.jupiter:junit-jupiter-params:5.3.1")
     testImplementation 'org.assertj:assertj-core:3.10.0'
     testImplementation 'org.skyscreamer:jsonassert:1.5.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
+    testImplementation("org.junit.jupiter:junit-jupiter-params:5.3.1")
+    testImplementation "io.cucumber:cucumber-java:6.10.4"
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
     testAnnotationProcessor('org.projectlombok:lombok:1.18.4')
     testCompile('org.projectlombok:lombok:1.18.4')
@@ -60,7 +61,12 @@ dependencies {
 }
 
 test {
-    useJUnitPlatform()
+    test {
+        systemProperty("cucumber.publish.quiet", true)
+        useJUnitPlatform {
+            excludeTags("disabled")
+        }
+    }
 }
 
 pitest {
@@ -123,4 +129,26 @@ task currentVersion {
 
 tasks.coveralls {
     dependsOn jacocoTestReport
+}
+
+configurations {
+    cucumberRuntime {
+        extendsFrom testImplementation
+    }
+}
+
+task cucumber() {
+    dependsOn assemble, testClasses
+    doLast {
+        javaexec {
+            environment('CUCUMBER_PUBLISH_QUIET', true)
+            main = "io.cucumber.core.cli.Main"
+            classpath = configurations.cucumberRuntime + sourceSets.main.output + sourceSets.test.output
+            args = ['--plugin', 'pretty', '--glue', 'com.github.leeonky.dal.cucumber', 'src/test/resources/features']
+        }
+    }
+
+    build {
+        dependsOn cucumber
+    }
 }
