--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ task sourcesJar(type: Jar) {
 }
 
 group = 'com.github.leeonky'
-version = '0.1.14' + System.env.VERSION_SCOPE
+version = '0.1.15' + System.env.VERSION_SCOPE
 sourceCompatibility = 1.8
 
 jacocoTestReport {
@@ -48,11 +48,15 @@ repositories {
 
 dependencies {
     compile 'com.github.leeonky:bean-util:0.2.14'
-    testImplementation 'org.assertj:assertj-core:3.10.0'
+
+    testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.13.1'
+    testImplementation 'org.assertj:assertj-core:3.21.0'
+//    TODO remove
     testImplementation 'org.skyscreamer:jsonassert:1.5.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testImplementation("org.junit.jupiter:junit-jupiter-params:5.3.1")
     testImplementation "io.cucumber:cucumber-java:6.10.4"
+    testImplementation 'com.github.leeonky:assertj-DAL:0.0.10'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
     testAnnotationProcessor('org.projectlombok:lombok:1.18.4')
     testCompile('org.projectlombok:lombok:1.18.4')
