--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,7 @@ dependencies {
     testCompile('org.projectlombok:lombok:1.18.4')
     testImplementation group: 'org.mockito', name: 'mockito-inline', version: '4.0.0'
 
-    pitest 'io.github.wmaarts:pitest-mutation-testing-elements-plugin:0.3.1'
+    pitest "io.github.wmaarts:pitest-mutation-testing-elements-plugin:0.3.1"
 }
 
 test {
