--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,7 @@ repositories {
 
 dependencies {
     compile 'com.github.leeonky:bean-util:0.6.1'
-    compile 'com.github.leeonky:interpreter-core:0.0.6.hotfix2'
+    compile 'com.github.leeonky:interpreter-core:0.0.7'
 
     testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.13.1'
     testImplementation 'org.assertj:assertj-core:3.21.0'
